hphp/hack/test/typecheck/tuple_as_constant2.php.exp
File "tuple_as_constant2.php", line 9, characters 37-45:
Invalid expression in constant initializer (Parsing[1002])
File "tuple_as_constant2.php", line 9, characters 48-56:
Invalid expression in constant initializer (Parsing[1002])
File "tuple_as_constant2.php", line 9, characters 37-45:
Illegal constant value (Naming[2023])
